--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4306,6 +4306,66 @@ from weather join weather w on DATEDIFF(weather.recordDate,w.recordDate)=1
 
 
 ---
+198. 打家劫舍
+你是一个专业的小偷，计划偷窃沿街的房屋。每间房内都藏有一定的现金，影响你偷窃的唯一制约因素就是相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 不触动警报装置的情况下 ，一夜之内能够偷窃到的最高金额。
+
+提示：
+
+1 <= nums.length <= 100
+0 <= nums[i] <= 400
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+
+var rob = function(nums){
+    if (nums.length < 3) {
+        return Math.max(...nums);
+    }
+    const dp = new Array(nums.length);
+    dp[0] = nums[0];
+    dp[1] = Math.max(nums[0],nums[1]);
+    let i = 2;
+    while(i < nums.length){
+        dp[i] = Math.max(dp[i - 1], dp[i - 2] + nums[i]);
+        i++;
+    }
+    return dp[dp.length - 1];
+}
+
+let nums=[2,7,9,3,1];
+let result=rob(nums);
+console.log(result);
+```
+
+```js
+var rob = function(nums){
+    if (nums.length < 3) {
+        return Math.max(...nums);
+    }
+
+    let first = nums[0];
+    let second = Math.max(nums[0],nums[1]);
+    let i = 2;
+    while(i < nums.length){
+        let temp = second;
+        second = Math.max(second, first + nums[i]);
+        first = temp;
+        i++;
+    }
+    return second;
+}
+
+```
+
+
+
+-----
+
 ## 202. 快乐数
 
 编写一个算法来判断一个数 n 是不是快乐数。
@@ -11791,6 +11851,59 @@ var diStringMatch = function(s) {
 
 let s = "DDDII";
 let result=diStringMatch(s)
+console.log(result);
+```
+
+---
+
+## 944.删列造序
+
+给你由 n 个小写字母字符串组成的数组 strs，其中每个字符串长度相等。
+
+这些字符串可以每个一行，排成一个网格。例如，strs = ["abc", "bce", "cae"] 可以排列为：
+
+```
+abc
+bce
+cae
+```
+
+你需要找出并删除 不是按字典序升序排列的 列。在上面的例子（下标从 0 开始）中，列 0（'a', 'b', 'c'）和列 2（'c', 'e', 'e'）都是按升序排列的，而列 1（'b', 'c', 'a'）不是，所以要删除列 1 。
+
+返回你需要删除的列数。
+
+提示：
+
+n == strs.length
+1 <= n <= 100
+1 <= strs[i].length <= 1000
+strs[i] 由小写英文字母组成
+
+```js
+/**
+ * @param {string[]} strs
+ * @return {number}
+ */
+var minDeletionSize = function(strs) {
+    if (strs.length < 2){
+        return 0;
+    }
+    let n=strs.length;
+    let m=strs[0].length;
+    let ans=0;
+    for (let i=0;i<m;i++){
+        for (let j=1;j<n;j++){
+            if (strs[j][i].charCodeAt() < strs[j-1][i].charCodeAt()){
+                ans++;
+                break;
+            }
+        }
+    }
+    return ans;
+};
+
+let strs = ["zyx","wvu","tsr"];
+let result=minDeletionSize(strs);
 console.log(result);
 ```
 
